add google fonts

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,5 +1,8 @@
+$light-blue-grey: #bae8e8;
 $navy-blue: #272343;
-$light-blue: #BAE8E8;
-$orange: #F76B1C;
-$white: #FFFFFF;
+$orange: #f76b1c;
+$white: #ffffff;
 
+// Font familie
+$josefin-slab: 'Josefin Slab', serif;
+$satisfy: 'Satisfy', cursive;
