--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,9 @@
+@import "./assets/scss/variables";
+
 body {
   margin: 0;
   min-height: 100vh;
   min-width: 100vw;
+  font-family: $josefin-slab;
+  font-size: 16px;
 }
