--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -1,10 +1,77 @@
-@import '../../assets/scss/variables';
+@import "../../assets/scss/variables";
 
 .header-container {
   background-color: $navy-blue;
-  color: $light-blue;
-  // color: $white;
+  box-shadow: 1px 10px 5px #ccc;
+  color: $light-blue-grey;
   display: flex;
-  height: 120px;
+  margin-bottom: 20px;
+  height: 122px;
   width: 100%;
+
+  .header {
+    display: flex;
+    justify-content: space-evenly;
+    width: 100%;
+
+    .first-section {
+      align-items: center;
+      justify-content: center;
+      display: flex;
+      flex-direction: column;
+      width: 20%;
+    }
+
+    .second-section {
+      width: 60%;
+      justify-content: flex-end;
+    }
+
+    .header-menu {
+      display: flex;
+      font-size: 1em;
+      
+      .menu-name {
+        font-family: $satisfy;
+        font-weight: bold;
+        font-size: 2.5em;
+        line-height: 1.5;
+        letter-spacing: normal;
+        margin: 0;
+      }
+
+      .menu-message {
+        margin: 0;
+      }
+
+      .menu-list {
+        display: flex;
+        font-size: 1.3em;
+        font-weight: lighter;
+        justify-content: space-between;
+        list-style: none;
+        margin: 0;
+        min-width: 80%;
+        text-transform: capitalize;
+        padding: 0;
+  
+        .menu-item {
+          display: inline;
+          align-self: center;
+        }
+
+        .menu-item:hover {
+          color: $orange;
+          box-shadow: 3px 25px 15px rgba(0, 0, 0, 0.15);
+          font-weight: bold;
+          transform: translate3D(0, -1px, 0);
+        }
+      }
+    }
+
+    /* .box-shadow-menu {
+      display: none;
+    } */
+  }
+  
 }
