--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -1,9 +1,6 @@
 .app {
-  // text-align: center;
+  display: flex;
+  flex-direction: column;
   min-height: 100vh;
   min-width: 100vw;
 }
-
-/* .container {
-  display: flex;
-} */
