--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -2,6 +2,7 @@ $light-blue-grey: #bae8e8;
 $navy-blue: #272343;
 $orange: #f76b1c;
 $white: #ffffff;
+$dark: #272343;
 
 // Font familie
 $josefin-slab: 'Josefin Slab', serif;
