--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,8 @@
 @import "./assets/scss/variables";
 
 body {
+  display: flex;
+  flex-direction: column;
   margin: 0;
   min-height: 100vh;
   min-width: 100vw;
