--- a/src/components/container/Container.scss
+++ b/src/components/container/Container.scss
@@ -1,12 +1,12 @@
 .container {
-  // background-color: cadetblue;
   display: flex;
   flex: 1;
   flex-direction: column;
+  margin: 30px 0 30px 0;
   
   &-item {
     display: flex;
     flex: 1;
-    margin: 40px 100px 40px 100px;
+    margin: 0 80px 0 80px;
   }
 }
