--- a/src/components/home/Home.scss
+++ b/src/components/home/Home.scss
@@ -1,10 +1,46 @@
 @import "../../assets/scss/variables";
 
 .home {
-  display: flex;
   background-color: $white;
+  display: flex;
+
+  &-left {
+    display: flex;
+    justify-content: center;
+    flex: 2;
+    flex-direction: column;
+  }
+
+  &-right {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    flex: 1;
+  }
 
   &-title {
     color: $orange;
+    font-size: 5em;
+    margin: 0;
+    text-transform: capitalize;
+  }
+
+  &-subtitle {
+    color: $light-blue-grey;
+    font-size: 2.5em;
+    margin: 0;
+  }
+
+  &-paragraph {
+    color: $dark;
+    font-size: 1.3em;
+    font-weight: lighter;
+    margin: 65px 40px 0 0;
+    text-align: left;
+  }
+
+  &-image {
+    border-radius: 50%;
+    padding: 30px 0;
   }
 }
