--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -1,6 +1,6 @@
 .app {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
-  min-width: 100vw;
+  max-width: 100%;
+  overflow-x: hidden;
 }
