--- a/src/index.scss
+++ b/src/index.scss
@@ -1,12 +1,11 @@
 @import "./assets/scss/variables";
 
-body {
+html, body, #root{
   display: flex;
   flex-direction: column;
-  margin: 0;
-  min-height: 100vh;
-  min-width: 100vw;
   font-family: $josefin-slab;
-  font-size: 16px;
-
+  margin: 0;
+  min-width: 100%;
+  height: 100%;
+  width: 100%;
 }
