--- a/src/components/home/Home.scss
+++ b/src/components/home/Home.scss
@@ -8,12 +8,14 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
+    height: 100%;
   }
 
   &-right {
     align-items: center;
     display: flex;
     justify-content: center;
+    height: 100%;
   }
 
   &-title {
