--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -1,6 +1,8 @@
 .app {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   max-width: 100%;
+  height: 100%;
   overflow-x: hidden;
 }
