--- a/src/components/container/Container.scss
+++ b/src/components/container/Container.scss
@@ -1,12 +1,13 @@
 .container {
   display: flex;
-  flex: 1;
   flex-direction: column;
-  margin: 30px 0 30px 0;
+  height: 100%;
+  z-index: -1;
   
   &-item {
     display: flex;
-    flex: 1;
     margin: 0 80px 0 80px;
+    height: 100%;
+    min-height: 100%;
   }
 }
